checker/tests/parsing/errors/unclosed_brace.mft
type Foo {
  value: Bar;
=== error ===
Unrecognized EOF found at 24
Expected one of "identifier", "impl", "when" or "}"